--- a/_data/home.yml
+++ b/_data/home.yml
@@ -5,12 +5,9 @@ navbar_entries:
   - title: blog
     url: blog
 
-  - title: website
-    url: https://www.abhinav.co
-
 project_entries:
-  - title: Project 1
-    url: overview-post
+  - title: MIT PRIMES
+    url: https://arxiv.org/abs/1407.0373
     desc: This is an example project, configured in _data/home.yml
 
   - title: Project 2
