--- a/_data/home.yml
+++ b/_data/home.yml
@@ -6,17 +6,17 @@ navbar_entries:
     url: blog
 
 project_entries:
-  - title: MIT PRIMES
-    url: https://arxiv.org/abs/1407.0373
-    desc: This is an example project, configured in _data/home.yml
+  - title: MIT PRIMES-USA `24
+    url: https://arxiv.org/abs/2409.02422
+    desc: My 2024 MIT PRIMES-USA research paper in representation theory of Lie superalgebras (Mentor Dr. Arun Kannan).
 
-  - title: Project 2
-    url: overview-post
-    desc: Projects are shown in card layout
+  - title: MIT PRIMES-USA `23
+    url: https://arxiv.org/abs/2307.09645
+    desc: My 2022 MIT PRIMES-USA research paper in factorization theory (Mentors Dr. Felix Gotti and Dr. Jim Coykendall).
 
-  - title: Project 3
-    url: overview-post
-    desc: You can control visibility from _config.yml file
+  - title: Summer Research at SJSU
+    url: https://arxiv.org/abs/2410.07534
+    desc: I did a research project in number theory in the summer of 2024, where I was mentored by Prof. Jordan Schettler at SJSU.
 
   - title: Project 4
     url: overview-post
