--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ title: Shihan Kanungo
 author: Shihan Kanungo
 url: https://www.shihankanungo.github.io/shihanmoonwalk/ # root address of the site
 description: > # description of the site (multiple lines allowed)
-  Moonwalk is a fast and elegant Jekyll theme with a clean dark mode. It comes with horizontal list (for navbar and footer), card list (for portfolio), and a generic vertical list. It is very easy to modify in case you want to build over it - please see _layouts/home.html to do that.
-
+Hello! I am Shihan, a high school junior living in Palo Alto, CA. My interests are olympiad and research math, olympiad physics, music (classical violin and jazz), reading, and food. 
 permalink: /:slug
 
 favicon: "./logo.png" # relative path to site's favicon
