--- a/_data/home.yml
+++ b/_data/home.yml
@@ -17,7 +17,7 @@ project_entries:
 
   - title: Summer Research at SJSU
     url: https://arxiv.org/abs/2410.07534
-    desc: I did a research project in number theory in the summer of 2024, where I was mentored by Prof. Jordan Schettler at SJSU.
+    desc: I did a research project in number theory in summer of 2024, where I was mentored by Prof. Jordan Schettler at SJSU.
 
 # old_project_entries:
 #   - title: Soopr
