--- a/_data/home.yml
+++ b/_data/home.yml
@@ -3,7 +3,7 @@ navbar_entries:
     url: about
 
   - title: resume
-    url: shihan-resume-2024.pdf
+    url: cv-2024.pdf
     
 
 project_entries:
