--- a/_data/home.yml
+++ b/_data/home.yml
@@ -13,9 +13,7 @@ project_entries:
 
   - title: MIT PRIMES-USA `23
     url: https://arxiv.org/pdf/2307.09645
-    desc: Commutative algebra. 
-    Joint work with Henry Jiang and Harry Kim. 
-    Mentors Dr. Felix Gotti (MIT) and Dr. Jim Coykendall (Clemson University).
+    desc: Commutative algebra. Joint work with Henry Jiang and Harry Kim. Mentors Dr. Felix Gotti (MIT) and Dr. Jim Coykendall (Clemson University).
 
   - title: SJSU '24
     url: https://arxiv.org/pdf/2410.07534
