--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Shihan Kanungo
 author: Shihan Kanungo
 url: https://www.shihankanungo.github.io/shihanmoonwalk/ # root address of the site
 description: > # description of the site (multiple lines allowed)
-  Hello! I am Shihan, a high school junior living in Palo Alto, CA. My interests are olympiad and research math, olympiad physics, music (classical violin and jazz), reading, and food. 
+  Hello! I am Shihan, a high school junior living in Palo Alto, CA. My interests are math, physics, music (I play classical and jazz violin and listen to a wide array of genres), reading, and food. 
 
 permalink: /:slug
 
