--- a/_data/home.yml
+++ b/_data/home.yml
@@ -43,8 +43,8 @@ footer_entries:
   - title: papers
     url: papers
 
-  - title: coursework
-    url: courses-by-area-2024.pdf
+  - title: honors
+    url: honors
 
   - title: courses
     url: courses
