--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,8 +1,8 @@
 navbar_entries:
-  - title: about
+  - title: About
     url: about
 
-  - title: resume
+  - title: CV
     url: cv-2024.pdf
     
 project_entries:
@@ -37,16 +37,16 @@ project_entries:
 #     desc: The better people know you, the better they collaborate
 
 footer_entries:
-  - title: google scholar
+  - title: Google Scholar
     url: https://scholar.google.com/citations?user=URUoNyoAAAAJ&hl=en&authuser=1
 
-  - title: papers
+  - title: Papers
     url: papers
 
-  - title: honors
+  - title: Honors
     url: honors
 
-  - title: courses
+  - title: Courses
     url: courses
 
 
