--- a/_data/home.yml
+++ b/_data/home.yml
@@ -49,18 +49,11 @@ project_entries:
 #     desc: The better people know you, the better they collaborate
 
 footer_entries:
+  - title: Home
+    url: https://shihankanungo.github.io/
+
   - title: Google Scholar
     url: https://scholar.google.com/citations?user=URUoNyoAAAAJ&hl=en&authuser=1
-
-  - title: Papers
-    url: papers
-
-  - title: Honors
-    url: honors
-
-  - title: Courses
-    url: courses
-
 
 misc_entries:
   - title: this is an example vertical list
