--- a/_data/home.yml
+++ b/_data/home.yml
@@ -31,7 +31,7 @@ project_entries:
   
   - title: MIT PRIMES-USA `23
     url: https://arxiv.org/pdf/2307.09645
-    desc: Commutative algebra. <br> Joint work with H Jiang and H Kim. <br> Mentors F Gotti (MIT) and J Coykendall (Clemson University).
+    desc: Commutative algebra. <br> With H Jiang and H Kim. <br> Mentors F Gotti (MIT) and J Coykendall (Clemson University).
 
   - title: SJSU '24
     url: https://arxiv.org/pdf/2410.07534
