--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ description: > # description of the site (multiple lines allowed)
           <span style={{fontSize: '0.9rem', lineHeight: '0.7rem'}}><span style={{fontWeight: 'bold'}}>Sidenote</span>: <span style={{fontStyle: 'italic'}}>I'm looking for work/projects for an potential upcoming gap term/year. Please let me know if you, or someone you know, is hiring! ♥︎ </span></span>
           
           <br /><br />
-          <span style={{fontSize: '0.9rem', lineHeight: '0.7rem'}}><span style={{fontWeight: 'bold'}}>Currently reading</span>: <span style={{fontStyle: 'italic'}}>Argonauts</span> by Maggie Nelson (also recommend reading her Bluets) & <span style={{fontStyle: 'italic'}}>Godel, Escher, Bach</span> by Hofstadter.</span>
+          <span style={{fontSize: '0.9rem', lineHeight: '0.7rem'}}><b>Currently reading</b>: <i>Catcher in the Rye</i> by JD Salinger & <i>The Language Puzzle</i> by Steven Mithen.</span>
           <br /><br />
-          <span style={{fontSize: '0.9rem', lineHeight: '0.7rem'}}><span style={{fontWeight: 'bold'}}>Current Music Recs</span>: <a style={{fontStyle: 'italic'}} href="https://open.spotify.com/album/0txwScooV6S8rd8uhWfUGe?si=r-MswTWDTRK3KoW8IBIzMg">Lafandar</a> by Heems & <a style={{fontStyle: 'italic'}} href="https://open.spotify.com/playlist/0q3ljBMndxToa5p6pZ7sWY?si=9d6db34aeea24f48">Courtney Barnett</a>. (Also, this playlist of: <a style={{textDecoration: "underline", "textDecorationStyle": 'dotted', fontStyle: 'italic'}} href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">my favorite albums from 2024</a>.) </span>
+          <span style={{fontSize: '0.9rem', lineHeight: '0.7rem'}}><b>Current Music Recs</b>: <a style={{fontStyle: 'italic'}} href="https://open.spotify.com/album/0txwScooV6S8rd8uhWfUGe?si=r-MswTWDTRK3KoW8IBIzMg">Lafandar</a> by Heems & <a style={{fontStyle: 'italic'}} href="https://open.spotify.com/playlist/0q3ljBMndxToa5p6pZ7sWY?si=9d6db34aeea24f48">Courtney Barnett</a>. (Also, this playlist of: <a style={{textDecoration: "underline", "textDecorationStyle": 'dotted', fontStyle: 'italic'}} href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">my favorite albums from 2024</a>.) </span>
       
 permalink: /:slug
 
