--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: Shihan Kanungo
 author: Shihan Kanungo
 url: https://www.shihankanungo.github.io/shihanmoonwalk/ # root address of the site
-description: > # description of the site (multiple lines allowed)
-  Hello! I am Shihan, a high school junior living in Palo Alto, CA. My interests are math, physics, music (I play classical and jazz violin and listen to a wide array of genres), reading, and food. 
-  Hey! I'm Shihan; thanks for stopping by! I'm fascinated about mathematics and physics and music and language. I truly believe in the art of making for the betterment of the world while having fun doing so.
+description: > # description of the site (multiple lines allowed) 
+  Hey! I'm Shihan; thanks for stopping by! I am a high school junior living in Palo Alto, CA. I am fascinated about mathematics, physics, music (performing, composing, and listening) and language. Most of the time I am busy with one of these. Otherwise, I am pretending to be busy while secretly daydreaming about food. I truly believe in the art of making for the betterment of the world while having fun doing so.
           <br /><br />
 
           <small><b>Sidenote</b>: <i>I'm looking to work on a hard research problem in combinatorics/graph theory. Please let me know if you, or someone you know, is interested in mentoring such a project! ♥︎ </i></small>
