--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ description: > # description of the site (multiple lines allowed)
           <small><b>Currently reading</b>: <i>Catcher in the Rye</i> by JD Salinger, and <i>The Language Puzzle</i> by Steven Mithen.</small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Lafandar</i> by Heems (<a href="https://open.spotify.com/album/0txwScooV6S8rd8uhWfUGe?si=r-MswTWDTRK3KoW8IBIzMg">Spotify</a>), and Courtney Barnett (playlist on <a href="https://open.spotify.com/playlist/0q3ljBMndxToa5p6pZ7sWY?si=9d6db34aeea24f48">Spotify</a>). <br> Also, this playlist of: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">my favorite albums from 2024</a>. </small>
-      
+
+  <img className="mt-8 md:mt-12 w-1/2 sm:w-1/3 lg:w-1/4" src="/signature.png" alt="signature of shihan" aria-hidden="true" />    
 permalink: /:slug
 
 favicon: "./logo.png" # relative path to site's favicon
