--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Shihan Kanungo
 author: Shihan Kanungo
 url: https://www.shihankanungo.github.io/shihanmoonwalk/ # root address of the site
 description: > # description of the site (multiple lines allowed) 
-  Hey! I'm Shihan; thanks for stopping by! I am a junior at high school living in Palo Alto, CA. I am fascinated about mathematics, physics, music (performing, composing, listening) and language. Most of the time I am busy with one of these. Otherwise, while pretending to be busy, I am secretly daydreaming about food. I truly believe in the art of making for the betterment of the world while having fun doing so.
+  Hey! I'm Shihan; thanks for stopping by! I am a junior at high school living in Palo Alto, CA. I am fascinated about mathematics, physics, music (performing, composing, listening) and language. Most of the time I am busy with one of these. Otherwise, while pretending to be busy, I am secretly daydreaming about food. I truly believe in the art of creating to make the world a better place--and having fun along the way!.
           <br /><br />
 
           <small><b>Sidenote</b>: <i>I'm looking to work on a hard research problem in combinatorics/graph theory. Please let me know if you, or someone you know, is interested in mentoring such a project! ♥︎ </i></small>
