--- a/_data/home.yml
+++ b/_data/home.yml
@@ -22,7 +22,7 @@ navbar_entries:
     
 project_entries:
   - title: MIT PRIMES-USA `24
-    url: https://arxiv.org/pdf/2409.02422
+    url: primes-24-1
     desc: Representation theory of Lie superalgebras. <br> Joint work with S Erat. <br> Mentor AS Kannan (MIT).
 
   - title: MIT PRIMES-USA `24
