--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>Catcher in the Rye</i> by JD Salinger, and <i>The Language Puzzle</i> by Steven Mithen.</small>
           <br />
-          <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i> by Max Bruch (1866), and the <i>Preludio</i> from <i>Partita No. 3 in E major, BWV 1006.1</i> by Johann Sebastian Bach.</small>
+          <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i> by Max Bruch (1866), and <br /> <i>Preludio</i> from <i>Partita No. 3 in E major, BWV 1006.1</i> by Johann Sebastian Bach.</small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Lafandar</i> by Heems (<a href="https://open.spotify.com/album/0txwScooV6S8rd8uhWfUGe?si=r-MswTWDTRK3KoW8IBIzMg">Spotify</a>), and Courtney Barnett (playlist on <a href="https://open.spotify.com/playlist/0q3ljBMndxToa5p6pZ7sWY?si=9d6db34aeea24f48">Spotify</a>). <br> Also, these playlists of my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br />
