--- a/_data/home.yml
+++ b/_data/home.yml
@@ -29,7 +29,7 @@ project_entries:
     desc: Representation theory of Lie superalgebras. <br> Joint work with S Erat. <br> Mentor AS Kannan (MIT).
 
   - title: MIT PRIMES-USA `24
-    url: false
+    url: primes-24-2
     desc: Representation Theory of Twisted Yangians in Complex Rank. In progress. <br> Joint work with S Erat. <br> Mentor AS Kannan (MIT).
   
   - title: MIT PRIMES-USA `23
