--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # description of the site (multiple lines allowed)
           <small><b>Sidenote</b>: <i>I'm looking to work on a hard research problem in combinatorics/graph theory. Please let me know if you, or someone you know, is interested in mentoring such a project! </i></small>
           
           <br /><br />
-          <small><b>Currently reading</b>: <i>Catcher in the Rye</i> by JD Salinger, and <i>The Language Puzzle</i> by Steven Mithen.</small>
+          <small><b>Currently reading</b>: <i>Catcher in the Rye</i> by JD Salinger, and <i>Elliptic Tales</i> by Avner Ash and Robert Gross.</small>
           <br /><br />
           <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Preludio</i>, from <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
           <br /><br />
