--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Shihan Kanungo
 author: Shihan Kanungo
 url: https://www.shihankanungo.github.io/shihanmoonwalk/ # root address of the site
 description: > # description of the site (multiple lines allowed) 
-  <img src="pic-bg.png" alt="Avatar" style="width:750px;"> <br />
+  <img src="photo.png" alt="Avatar" style="width:250px; border-radius:50%;"> <br />
   Hey! I'm Shihan&mdash;thanks for stopping by! I'm a high school junior from Palo Alto, CA, with a deep fascination for mathematics, physics, language, and music. I play the violin, love composing with my MPK Mini Plus, and have an eclectic taste in listening. When I am not actually engrossed in one of these, you will find me pretending to be so, while secretly daydreaming about food. I aspire to nurture my passions and use them to make meaningful contributions to society&mdash;while having fun doing so!
           <br /><br />
 
