--- a/_data/home.yml
+++ b/_data/home.yml
@@ -65,6 +65,9 @@ footer_entries:
   - title: Google Scholar
     url: https://scholar.google.com/citations?user=URUoNyoAAAAJ&hl=en&authuser=1
 
+  - title: Music
+    url: music
+
 misc_entries:
   - title: this is an example vertical list
     url: false
