--- a/_data/home.yml
+++ b/_data/home.yml
@@ -26,11 +26,11 @@ navbar_entries:
 project_entries:
   - title: MIT PRIMES-USA `24
     url: primes-24-1
-    desc: Representation theory of Lie superalgebras. <br> Joint work with S Erat. <br> Mentor AS Kannan (MIT).
+    desc: Representations of Lie superalgebras. <br> Joint work with S Erat. <br> Mentor AS Kannan (MIT).
 
   - title: MIT PRIMES-USA `24
     url: primes-24-2
-    desc: Representation Theory of Twisted Yangians in Complex Rank. In progress. <br> Joint work with S Erat. <br> Mentor AS Kannan (MIT).
+    desc: Representations of Twisted Yangians in Complex Rank. In progress. <br> Joint work with S Erat. <br> Mentor AS Kannan (MIT).
   
   - title: MIT PRIMES-USA `23
     url: primes-23
