--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: > # description of the site (multiple lines allowed)
           <small><b>Current Music Recs</b>: <i>Sick Boi</i> by Ren (<a href="https://open.spotify.com/album/5qewHlxCihdHQP9fQGHUhH?si=Q5MQmY21Ta6Q4g6OO8Vkvg">Spotify</a>), and Morgan Wade (playlist on <a href="https://open.spotify.com/playlist/35zBVJ0veKEnQkrjjPb92L?si=89e8798862914e1d">Spotify</a>). <br> Also, these playlists of my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br />
           
-  <img className="mt-8 md:mt-12 w-1/2 sm:w-1/3 lg:w-1/4" src="/signature-white.png" alt="signature of shihan" aria-hidden="true" />    
+  <img className="mt-8 md:mt-12 w-1/2 sm:w-1/3 lg:w-1/4" src="/signature.png" alt="signature of shihan" aria-hidden="true" />    
 permalink: /:slug
 
 favicon: "./logo.png" # relative path to site's favicon
