--- a/_data/home.yml
+++ b/_data/home.yml
@@ -30,7 +30,7 @@ project_entries:
 
   - title: MIT PRIMES-USA `24
     url: primes-24-2
-    desc: Representations of twisted Yangians in complex rank. In progress. <br> Mentor AS Kannan (MIT).
+    desc: Representations of twisted Yangians in complex rank. <br> In progress. <br> Mentor AS Kannan (MIT).
   
   - title: MIT PRIMES-USA `23
     url: primes-23
