--- a/_data/home.yml
+++ b/_data/home.yml
@@ -24,6 +24,10 @@ navbar_entries:
   #   url: about
     
 project_entries:
+ - title: MIT PRIMES-USA `25
+    url: primes-25
+    desc: Saturation problems for sequences. <br> Mentor Jesse Geneson (SJSU).
+    
   - title: MIT PRIMES-USA `24
     url: primes-24-1
     desc: Representations of Lie superalgebras. <br> Joint work with S Erat. <br> Mentor AS Kannan (MIT).
