--- a/_data/home.yml
+++ b/_data/home.yml
@@ -26,7 +26,7 @@ navbar_entries:
 project_entries:
   - title: MIT PRIMES-USA `25
     url: primes-25
-    desc: Saturation problems for sequences. <br> Mentor Jesse Geneson (SJSU).
+    desc: Saturation problems for sequences. <br> In progress. <br> Mentor Jesse Geneson (SJSU).
     
   - title: MIT PRIMES-USA `24
     url: primes-24-1
