--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>Catcher in the Rye</i> by JD Salinger, and <i>Elliptic Tales</i> by Avner Ash and Robert Gross.</small>
           <br /><br />
-          <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Preludio</i>, from <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
+          <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>In the Townships</i> by Dudu Pukwana (<a href="https://youtube.com/playlist?list=PLE8FFB87B77AF5AD8&si=CJrt4bXMtnqv0F4H">YouTube</a>), and Morgan Wade (playlist on <a href="https://open.spotify.com/playlist/35zBVJ0veKEnQkrjjPb92L?si=89e8798862914e1d">Spotify</a>). <br> Also, these playlists of my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br />
