--- a/_data/home.yml
+++ b/_data/home.yml
@@ -79,8 +79,8 @@ footer_entries:
   - title: Music
     url: music
 
-  # - title: Wrapped
-  #   url: wrapped
+  - title: Wrapped
+    url: wrapped
 
 misc_entries:
   - title: this is an example vertical list
