--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
           <br /><br />
+          <small><b>Recent Movies</b>: <i>The Great Dictator</i> (1940 d. Charlie Chaplin), and <i>Robot Dreams</i> (2024 d. Pablo Berger). </small>
+          <br /><br />
           <small><b>Current Music Recs</b>: <i>In the Townships</i> by Dudu Pukwana (<a href="https://youtube.com/playlist?list=PLE8FFB87B77AF5AD8&si=CJrt4bXMtnqv0F4H">YouTube</a>), and <i>When I Was Born for the 7th Time</i> by Cornershop. Also, these playlists of my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br />
           
