--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Recent Movies</b>: <i>The Great Dictator</i> (1940 d. Charlie Chaplin), and <i>Robot Dreams</i> (2024 d. Pablo Berger). </small>
           <br /><br />
-          <small><b>Current Music Recs</b>: <i>The Hardest Way to Make an Easy Living</i> by The Streets (<a href="https://open.spotify.com/album/7EZnqnThnWnSG4MJMd0Gug?si=6Sce8NbnRFWaTJgJqCLrvg">Spotify</a>), and <i>When I Was Born for the 7th Time</i> by Cornershop. Also, these playlists, with one song each, from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
+          <small><b>Current Music Recs</b>: <i>The Hardest Way to Make an Easy Living</i> by The Streets (<a href="https://open.spotify.com/album/7EZnqnThnWnSG4MJMd0Gug?si=6Sce8NbnRFWaTJgJqCLrvg">Spotify</a>), and <i>A Badly Broken Code</i> by Dessa. Also, these playlists, with one song each, from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br />
           
   <img className="mt-8 md:mt-12 w-1/2 sm:w-1/3 lg:w-1/4" src="/signature.png" alt="signature of shihan" aria-hidden="true" />    
