--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # description of the site (multiple lines allowed)
           <small><b>Sidenote</b>: <i>I'm looking to work on a hard research problem in combinatorics/graph theory. Please let me know if you, or someone you know, is interested in mentoring such a project! </i></small>
           
           <br /><br />
-          <small><b>Currently reading</b>: <i>A Sense of Where You Are</i> by John McPhee, and <i>Jonathan Livingston Seagull</i> by Richard Bach.</small>
+          <small><b>Currently reading</b>: <i>A Sense of Where You Are</i> by John McPhee, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
           <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
           <br /><br />
