--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # description of the site (multiple lines allowed)
           <small><b>Sidenote</b>: <i>I'm looking to work on a hard research problem in combinatorics/graph theory. Please let me know if you, or someone you know, is interested in mentoring such a project! </i></small>
           
           <br /><br />
-          <small><b>Recent news</b>: Mathematicians Wang Hong from NYU Courant, along with Joshua Zahl of the University of British Columbia, have solved an "infamous” geometry problem called the Kakeya conjecture within three dimensions. This conjecture asserts that a Kakeya set -- a subset of <b>R</b><sup>3</sup> that contains a unit line segment in every direction -- must have Minkowski and Hausdorff dimension equal to three. This could have implications for imaging, data processing, cryptography and wireless communication.</small>
+          <small><b>Recent news</b>: Mathematicians Wang Hong from NYU Courant, along with Joshua Zahl of the University of British Columbia, have solved an "infamous” geometry problem called the Kakeya conjecture within three dimensions. This conjecture asserts that a Kakeya set -- a subset of <b>R</b><sup>3</sup> that contains a unit line segment in every direction -- must have Minkowski and Hausdorff dimension equal to three. This is seen as a spectacular progress in geometric measure theory, and could also have implications for imaging, data processing, cryptography and wireless communication.</small>
           <br /><br />
           <small><b>Currently reading</b>: <i>A Sense of Where You Are</i> by John McPhee, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
