--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>Memoir of a Snail</i> (2024 d. Adam Elliot), and <i>Robot Dreams</i> (2024 d. Pablo Berger). </small>
+          <small><b>Recent Movies</b>: <i>Memoir of a Snail</i> (2024 d. Adam Elliot), and <i>Flow</i> (2024 d. Gints Zilbalodis). </small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Prayer for Peace</i> by Amalgam (<a href="https://www.youtube.com/watch?v=hcbho0eAe4I">YouTube</a>), and <i>Dimanche à Bamako</i> by Amadou and Mariam. Also, these playlists, with one song each, from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
