--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Recent Movies</b>: <i>Memoir of a Snail</i> (2024 d. Adam Elliot), and <i>Flow</i> (2024 d. Gints Zilbalodis). </small>
           <br /><br />
-          <small><b>Current Music Recs</b>: <i>Air Lore</i> by Air (<a href="https://open.spotify.com/album/3ndLtSXmNP3Epk2PtXqLFT?si=mzrBbFYFS-CkNvXhUDBnIA">Spotify</a>), and <i>Vietnam: The Aftermath</i> by Billy Bang. Also, these playlists, with one song each, from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
+          <small><b>Current Music Recs</b>: <i>Air Lore</i> by Air (<a href="https://open.spotify.com/album/3ndLtSXmNP3Epk2PtXqLFT?si=mzrBbFYFS-CkNvXhUDBnIA">Spotify</a>), and <i>Vietnam: The Aftermath</i> by Billy Bang. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
           
   <img className="mt-8 md:mt-12 w-1/2 sm:w-1/3 lg:w-1/4" src="/signature.png" alt="signature of shihan" aria-hidden="true" />    
