--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Recent news</b>: Mathematicians have finally succeeded in unifying the laws of physics that govern the motions of particles at different scales. In a recent paper uploaded to arXiv, mathematicians Yu Deng, Zaher Hani, and Xiao Ma claim to resolve a question set by mathematician David Hilbert in 1900 as part of an ambitious program for all mathematicians of the 20th century &mdash; and could deepen our understanding of the complex behaviour of fluids in the atmosphere and oceans. In this paper, they rigorously derive the fundamental PDEs of fluid mechanics, such as the compressible Euler and incompressible Navier-Stokes-Fourier equations, starting from the hard sphere particle systems undergoing elastic collisions. This resolves Hilbert's sixth problem, as it pertains to the program of deriving the fluid equations from Newton's laws by way of Boltzmann's kinetic theory. The proof relies on the derivation of Boltzmann's equation on 2D and 3D tori.</small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>Never Let Me Go</i> by Kazuo Ishiguro, and <i>A People's History of the United States</i> by Howard Zinn.</small>
+          <small><b>Currently reading</b>: <i>Remains of the Day</i> by Kazuo Ishiguro, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
           <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
           <br /><br />
