--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # description of the site (multiple lines allowed)
           <small><b>Sidenote</b>: <i>I'm looking to work on a hard research problem in combinatorics/graph theory. Please let me know if you, or someone you know, is interested in mentoring such a project! </i></small>
           
           <br /><br />
-          <small><b>Recent news</b>: In a new study, Ryuhei Uehara and Tonan Kamata, from JAIST, along with Erik D. Demaine from MIT, have finally proved that Dudeney's dissection of the equilateral triangle into a square using only four pieces, is optimal by using a new proof technique. This technique shows for the first time that it is possible to prove the optimality of the solution to a dissection problem.</small>
+          <small><b>Recent news</b>: Japanese mathematician Masaki Kashiwara has won the 2025 Abel Prize, for his fundamental contributions to algebraic analysis and representation theory, in particular the development of the theory of D-modules and the discovery of crystal bases. </small>
           <br /><br />
           <small><b>Currently reading</b>: <i>Remains of the Day</i> by Kazuo Ishiguro, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
