--- a/_data/home.yml
+++ b/_data/home.yml
@@ -39,7 +39,7 @@ personal_entries:
   # - title: Christgau
   #   url: xgau
 
-  - title: Mar 27-Apr 7
+  - title: India Trip
     url: india-trip
 
 project_entries:
