--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # description of the site (multiple lines allowed)
           <small><b>Sidenote</b>: <i>I'm looking to work on a hard research problem in combinatorics/graph theory. Please let me know if you, or someone you know, is interested in mentoring such a project! </i></small>
           
           <br /><br />
-          <small><b>Recent news</b>: Richard Bamler, a mathematician at the University of California, Berkeley and  Bruce Kleiner of New York University have proved the multiplicity-one conjecture. Not only does the work now enable mathematicians to better understand mean curvature flow, but it may also have important applications throughout geometry and topology. </small>
+          <small><b>Recent news</b>: Richard Bamler, a mathematician at UC Berkeley and  Bruce Kleiner of NYU have proved the <b>multiplicity-one conjecture</b>. Not only does the work now enable mathematicians to better understand mean curvature flow, but it may also have important applications throughout geometry and topology. </small>
           <br /><br />
           <small><b>Currently reading</b>: <i>Remains of the Day</i> by Kazuo Ishiguro, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
