--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Recent news</b>: Richard Bamler, a mathematician at UC Berkeley, and Bruce Kleiner of NYU have proved the multiplicity-one conjecture. Their work not only advances the understanding of mean curvature flow but also holds significant potential for applications across geometry and topology. </small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>Remains of the Day</i> by Kazuo Ishiguro, and <i>A People's History of the United States</i> by Howard Zinn.</small>
+          <small><b>Currently reading</b>: <i>Klara and the Sun</i> by Kazuo Ishiguro, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
           <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
           <br /><br />
