--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>Hundreds of Beavers</i> (2022 d. Mike Cheslik), and <i>Love, Simon</i> (2018 d. Greg Berlanti). </small>
+          <small><b>Recent Movies</b>: <i>Hundreds of Beavers</i> (2022 d. Mike Cheslik), and <i>Juno</i> (2007 d. Jason Reitman). </small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Testament of The Times</i> by Jae Skeese (<a href="https://open.spotify.com/album/3VVpo8SytAfK04PdAWaxu9?si=Twb_W5gmTJmS4RDq_7IQbQ">Spotify</a>), and <i>Live at Macalester College</i> by The Byard Lancaster Unit. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
