--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>Klara and the Sun</i> by Kazuo Ishiguro, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
-          <small><b>Currently playing</b>: <i>Violin Concerto No. 1 in G minor, Op. 26</i>, by Max Bruch (1866), and <i>Partita No. 3 in E major, BWV 1006.1</i>, by Johann Sebastian Bach.</small>
+          <small><b>Currently playing</b>: <i>Carmen Fantasy, Op. 25</i>, by Pablo de Sarasate (1881), and <i>Sonata No. 3 in C major, BWV 1005.1</i>, by Johann Sebastian Bach.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Hundreds of Beavers</i> (2022 d. Mike Cheslik), and <i>Juno</i> (2007 d. Jason Reitman). </small>
           <br /><br />
