--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Shihan Kanungo<a href="https://www.shihankanungo.github.io/x">.</a>
+title: Shihan Kanungo
 author: Shihan Kanungo
 url: https://www.shihankanungo.github.io/shihanmoonwalk/ # root address of the site
 description: > # description of the site (multiple lines allowed) 
